Fix cards in all sections, style & alignment

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -218,15 +218,19 @@ main {
     text-align: center;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     padding: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   
     h3 {
       color: $color_accent;
-      margin-bottom: 1%;
-      min-height: 120px;
+      margin-bottom: 1.5rem;
+      text-align: left;
     }
   
     p {
       color: #040720;
+      text-align: left;
     }
   }
 
@@ -353,15 +357,15 @@ main {
         text-align: center;
         box-shadow: 0 0 15px rgba(0,0,0,0.2);
         padding: 3%;
+        display: flex;
+        flex-direction: column;
 
-        .oni-who-card-head {
-          min-height: 50px;
-        }
-      
         h3 {
           color: $color_accent;
-          margin-bottom: 3%;
+          margin-bottom: 1.5rem;
+          text-align: left;
         }
+      
       
         p {
           color: #040720;
